// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`change option 1`] = `
<div class="ms-picker ms-area">
  <div class="ms-hairline--top-bottom ms-picker__toolbar">
    <div class="ms-picker__cancel">
      取消
    </div>
    <!---->
    <div class="ms-picker__confirm">
      确认
    </div>
  </div>
  <!---->
  <div class="ms-picker__columns" style="height: 220px;">
    <div class="ms-picker-column" style="height: 220px;">
      <ul style="transform: translate3d(0, 88px, 0); line-height: 44px;"></ul>
    </div>
    <div class="ms-picker-column" style="height: 220px;">
      <ul style="transform: translate3d(0, 88px, 0); line-height: 44px;"></ul>
    </div>
    <div class="ms-picker-column" style="height: 220px;">
      <ul style="transform: translate3d(0, 88px, 0); line-height: 44px;"></ul>
    </div>
    <div class="ms-hairline--top-bottom ms-picker__frame" style="height: 44px;"></div>
  </div>
</div>
`;

exports[`change option 2`] = `
<div class="ms-picker ms-area">
  <div class="ms-hairline--top-bottom ms-picker__toolbar">
    <div class="ms-picker__cancel">
      取消
    </div>
    <!---->
    <div class="ms-picker__confirm">
      确认
    </div>
  </div>
  <!---->
  <div class="ms-picker__columns" style="height: 220px;">
    <div class="ms-picker-column" style="height: 220px;">
      <ul style="transform: translate3d(0, 44px, 0); line-height: 44px;">
        <li class="ms-ellipsis ms-picker-column__item" style="height: 44px;">北京市</li>
        <li class="ms-ellipsis ms-picker-column__item ms-picker-column__item--selected" style="height: 44px;">天津市</li>
      </ul>
    </div>
    <div class="ms-picker-column" style="height: 220px;">
      <ul style="transform: translate3d(0, 88px, 0); line-height: 44px;">
        <li class="ms-ellipsis ms-picker-column__item ms-picker-column__item--selected" style="height: 44px;">天津市</li>
        <li class="ms-ellipsis ms-picker-column__item" style="height: 44px;">县</li>
      </ul>
    </div>
    <div class="ms-picker-column" style="height: 220px;">
      <ul style="transform: translate3d(0, 88px, 0); line-height: 44px;">
        <li class="ms-ellipsis ms-picker-column__item ms-picker-column__item--selected" style="height: 44px;">和平区</li>
        <li class="ms-ellipsis ms-picker-column__item" style="height: 44px;">河东区</li>
      </ul>
    </div>
    <div class="ms-hairline--top-bottom ms-picker__frame" style="height: 44px;"></div>
  </div>
</div>
`;

exports[`change option 3`] = `
<div class="ms-picker ms-area">
  <div class="ms-hairline--top-bottom ms-picker__toolbar">
    <div class="ms-picker__cancel">
      取消
    </div>
    <!---->
    <div class="ms-picker__confirm">
      确认
    </div>
  </div>
  <!---->
  <div class="ms-picker__columns" style="height: 220px;">
    <div class="ms-picker-column" style="height: 220px;">
      <ul style="transform: translate3d(0, 44px, 0); line-height: 44px;">
        <li class="ms-ellipsis ms-picker-column__item" style="height: 44px;">北京市</li>
        <li class="ms-ellipsis ms-picker-column__item ms-picker-column__item--selected" style="height: 44px;">天津市</li>
      </ul>
    </div>
    <div class="ms-picker-column" style="height: 220px;">
      <ul style="transform: translate3d(0, 88px, 0); line-height: 44px;">
        <li class="ms-ellipsis ms-picker-column__item ms-picker-column__item--selected" style="height: 44px;">天津市</li>
        <li class="ms-ellipsis ms-picker-column__item" style="height: 44px;">县</li>
      </ul>
    </div>
    <div class="ms-picker-column" style="height: 220px;">
      <ul style="transform: translate3d(0, 44px, 0); line-height: 44px;">
        <li class="ms-ellipsis ms-picker-column__item" style="height: 44px;">和平区</li>
        <li class="ms-ellipsis ms-picker-column__item ms-picker-column__item--selected" style="height: 44px;">河东区</li>
      </ul>
    </div>
    <div class="ms-hairline--top-bottom ms-picker__frame" style="height: 44px;"></div>
  </div>
</div>
`;

exports[`reset method 1`] = `
<div class="ms-picker ms-area">
  <div class="ms-hairline--top-bottom ms-picker__toolbar">
    <div class="ms-picker__cancel">
      取消
    </div>
    <!---->
    <div class="ms-picker__confirm">
      确认
    </div>
  </div>
  <!---->
  <div class="ms-picker__columns" style="height: 220px;">
    <div class="ms-picker-column" style="height: 220px;">
      <ul style="transform: translate3d(0, 44px, 0); line-height: 44px;">
        <li class="ms-ellipsis ms-picker-column__item" style="height: 44px;">北京市</li>
        <li class="ms-ellipsis ms-picker-column__item ms-picker-column__item--selected" style="height: 44px;">天津市</li>
      </ul>
    </div>
    <div class="ms-picker-column" style="height: 220px;">
      <ul style="transform: translate3d(0, 44px, 0); line-height: 44px;">
        <li class="ms-ellipsis ms-picker-column__item" style="height: 44px;">天津市</li>
        <li class="ms-ellipsis ms-picker-column__item ms-picker-column__item--selected" style="height: 44px;">县</li>
      </ul>
    </div>
    <div class="ms-picker-column" style="height: 220px;">
      <ul style="transform: translate3d(0, 88px, 0); line-height: 44px;">
        <li class="ms-ellipsis ms-picker-column__item ms-picker-column__item--selected" style="height: 44px;">蓟县</li>
      </ul>
    </div>
    <div class="ms-hairline--top-bottom ms-picker__frame" style="height: 44px;"></div>
  </div>
</div>
`;

exports[`reset method 2`] = `
<div class="ms-picker ms-area">
  <div class="ms-hairline--top-bottom ms-picker__toolbar">
    <div class="ms-picker__cancel">
      取消
    </div>
    <!---->
    <div class="ms-picker__confirm">
      确认
    </div>
  </div>
  <!---->
  <div class="ms-picker__columns" style="height: 220px;">
    <div class="ms-picker-column" style="height: 220px;">
      <ul style="transform: translate3d(0, 88px, 0); line-height: 44px;">
        <li class="ms-ellipsis ms-picker-column__item ms-picker-column__item--selected" style="height: 44px;">北京市</li>
        <li class="ms-ellipsis ms-picker-column__item" style="height: 44px;">天津市</li>
      </ul>
    </div>
    <div class="ms-picker-column" style="height: 220px;">
      <ul style="transform: translate3d(0, 88px, 0); line-height: 44px;">
        <li class="ms-ellipsis ms-picker-column__item ms-picker-column__item--selected" style="height: 44px;">北京市</li>
        <li class="ms-ellipsis ms-picker-column__item" style="height: 44px;">县</li>
      </ul>
    </div>
    <div class="ms-picker-column" style="height: 220px;">
      <ul style="transform: translate3d(0, 88px, 0); line-height: 44px;">
        <li class="ms-ellipsis ms-picker-column__item ms-picker-column__item--selected" style="height: 44px;">东城区</li>
        <li class="ms-ellipsis ms-picker-column__item" style="height: 44px;">西城区</li>
      </ul>
    </div>
    <div class="ms-hairline--top-bottom ms-picker__frame" style="height: 44px;"></div>
  </div>
</div>
`;

exports[`watch areaList & code 1`] = `
<div class="ms-picker ms-area">
  <div class="ms-hairline--top-bottom ms-picker__toolbar">
    <div class="ms-picker__cancel">
      取消
    </div>
    <!---->
    <div class="ms-picker__confirm">
      确认
    </div>
  </div>
  <!---->
  <div class="ms-picker__columns" style="height: 220px;">
    <div class="ms-picker-column" style="height: 220px;">
      <ul style="transform: translate3d(0, 88px, 0); line-height: 44px;"></ul>
    </div>
    <div class="ms-picker-column" style="height: 220px;">
      <ul style="transform: translate3d(0, 88px, 0); line-height: 44px;"></ul>
    </div>
    <div class="ms-picker-column" style="height: 220px;">
      <ul style="transform: translate3d(0, 88px, 0); line-height: 44px;"></ul>
    </div>
    <div class="ms-hairline--top-bottom ms-picker__frame" style="height: 44px;"></div>
  </div>
</div>
`;

exports[`watch areaList & code 2`] = `
<div class="ms-picker ms-area">
  <div class="ms-hairline--top-bottom ms-picker__toolbar">
    <div class="ms-picker__cancel">
      取消
    </div>
    <!---->
    <div class="ms-picker__confirm">
      确认
    </div>
  </div>
  <!---->
  <div class="ms-picker__columns" style="height: 220px;">
    <div class="ms-picker-column" style="height: 220px;">
      <ul style="transform: translate3d(0, 88px, 0); line-height: 44px;">
        <li class="ms-ellipsis ms-picker-column__item ms-picker-column__item--selected" style="height: 44px;">北京市</li>
        <li class="ms-ellipsis ms-picker-column__item" style="height: 44px;">天津市</li>
      </ul>
    </div>
    <div class="ms-picker-column" style="height: 220px;">
      <ul style="transform: translate3d(0, 88px, 0); line-height: 44px;">
        <li class="ms-ellipsis ms-picker-column__item ms-picker-column__item--selected" style="height: 44px;">北京市</li>
        <li class="ms-ellipsis ms-picker-column__item" style="height: 44px;">县</li>
      </ul>
    </div>
    <div class="ms-picker-column" style="height: 220px;">
      <ul style="transform: translate3d(0, 88px, 0); line-height: 44px;">
        <li class="ms-ellipsis ms-picker-column__item ms-picker-column__item--selected" style="height: 44px;">东城区</li>
        <li class="ms-ellipsis ms-picker-column__item" style="height: 44px;">西城区</li>
      </ul>
    </div>
    <div class="ms-hairline--top-bottom ms-picker__frame" style="height: 44px;"></div>
  </div>
</div>
`;

exports[`watch areaList & code 3`] = `
<div class="ms-picker ms-area">
  <div class="ms-hairline--top-bottom ms-picker__toolbar">
    <div class="ms-picker__cancel">
      取消
    </div>
    <!---->
    <div class="ms-picker__confirm">
      确认
    </div>
  </div>
  <!---->
  <div class="ms-picker__columns" style="height: 220px;">
    <div class="ms-picker-column" style="height: 220px;">
      <ul style="transform: translate3d(0, 88px, 0); line-height: 44px;">
        <li class="ms-ellipsis ms-picker-column__item ms-picker-column__item--selected" style="height: 44px;">北京市</li>
        <li class="ms-ellipsis ms-picker-column__item" style="height: 44px;">天津市</li>
      </ul>
    </div>
    <div class="ms-picker-column" style="height: 220px;">
      <ul style="transform: translate3d(0, 88px, 0); line-height: 44px;">
        <li class="ms-ellipsis ms-picker-column__item ms-picker-column__item--selected" style="height: 44px;">北京市</li>
        <li class="ms-ellipsis ms-picker-column__item" style="height: 44px;">县</li>
      </ul>
    </div>
    <div class="ms-picker-column" style="height: 220px;">
      <ul style="transform: translate3d(0, 88px, 0); line-height: 44px;">
        <li class="ms-ellipsis ms-picker-column__item ms-picker-column__item--selected" style="height: 44px;">东城区</li>
        <li class="ms-ellipsis ms-picker-column__item" style="height: 44px;">西城区</li>
      </ul>
    </div>
    <div class="ms-hairline--top-bottom ms-picker__frame" style="height: 44px;"></div>
  </div>
</div>
`;
